@@ -3,9 +3,10 @@
 	fixes in game script interpreter
 	? Amiga OS4 port
 	? change character in get/use
-	? do not talk to characters that have nothing to tell
+	do not talk to characters that have nothing to tell
 	time compression
 	in game help
+	quest failed dialog implemented
 	other minor GUI improvements
 
 0.6.3
